# RuruGrab

./: .gitignore  LICENSE  README.md
.github/: FUNDING.yml
app/: get_help.mjs  index.html  package-lock.json  package.json  splashscreen.html  vite.config.js
app/docs/: index-html-modularization-plan.md
app/scripts/: down_gallery_dl.py  down_gallery_dl.rs  down_test.rs  down_test_img.rs
app/src/: api.js  bootstrap.js  config.js  dom.js  domUtils.js  logger.js  main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/resources/: rurugrab.openapi.json  utubeholic.openapi.json
app/src-tauri/src/: dupfinder.rs  lib.rs  main.rs  organizer.rs  renamer.rs
app/src-tauri/src/api/: models.rs  server.rs
app/src-tauri/src/core/: config.rs  db.rs  io.rs  log.rs  mod.rs  parse.rs  state.rs
app/src-tauri/src/core/sources/: gallery_dl.rs  mod.rs  youtube.rs
app/src-tauri/src/core/worker/: helper.rs  meta.rs  mod.rs
docs/screenshots/: README.md
extension/: background.js  constants.js  content.css  db.js  manifest.json  options.css  options.html  options.js
extension/bg/: download.js  history_import.js  menus.js  messages.js  newtab_mark.js  site-rules.js  sqlite_sync.js  utils.js  watched.js
extension/content/: badge.js  engine.js  history.js  hooks.js  instagram.js  main.js  messaging.js  ns.js  settings.js  toast.js  twitter.js  youtube.js
workspace/automagicfiles/src-tauri/: Cargo.toml  tauri.conf.json
workspace/automagicfiles/src-tauri/capabilities/: default.json
workspace/automagicfiles/src-tauri/resources/: settings.json
workspace/automagicfiles/src-tauri/src/: lib.rs  main.rs
(+25 files in other folders)
