[package]
name = "rurugrab"
version = "0.1.0"
description = "RuruGrab"
authors = ["RuruGrab"]
edition = "2021"

[lib]
name = "rurugrab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "time", "fs", "io-util"] }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["stream"] }

parking_lot = "0.12"
regex = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

rusqlite = { version = "0.31", features = ["bundled"] }
dirs-next = "2"
tokio-util = "0.7"
unicode-normalization = "0.1"
encoding_rs = "0.8"
fancy-regex = "0.13"
sha2 = "0.10"

